--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -23,7 +23,7 @@ contact_form_action = "#"
 copyright = "Copyright &copy; 2020 a theme by [themefisher.com](themefisher.com)"
 description = "This is meta description"
 email = "exmaple@ymail.com"
-google_analitycs_id = "Your ID"
+google_analitycs_id = "UA-158247351-1"
 home = "Home"
 layout = "1"
 logo = "images/logo.png"
