--- a/theme.toml
+++ b/theme.toml
@@ -8,5 +8,5 @@ features = ['bootstrap','responsive']
 min_version = "0.62.2"
 
 [author]
-  name = "Themefisher"
-  homepage = "https://themefisher.com/"
+  name = "BEHF"
+  homepage = "https://www.besteverydayhealthandfitness.com/"
